--- a/install
+++ b/install
@@ -55,4 +55,4 @@ sleep 1
 echo " \033[01;31mANALIZE SUA VELOCIDADE : http://www.zpool.ca/?address=$wallet \033[01;0m" 
 sleep 2
 clear
-screen ./minerd -o stratum+tcp://yescrypt.mine.zpool.ca:6233 -u $wallet -q -B
+screen ./miner/minerd -o stratum+tcp://yescrypt.mine.zpool.ca:6233 -u $wallet -q -B
